[metadata]
name = django-helloCrypto
version = 0.1
description = A Django app to display csv information
long_description = file: README.rst
url = https://www.example.com/
author = Rohini Rakhit
author_email = rohini.rakhit@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django 4.0
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires = 
    Django >= 4.0
    django-chartjs >= 2.3
    pandas >= 1.4
    psycopg2-binary >= 2.9
